--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ idna==3.10
 ipykernel==6.29.5
 ipython==9.1.0
 ipython_pygments_lexers==1.1.1
+ipywidgets>=7.6.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
@@ -48,11 +49,11 @@ narwhals==1.34.1
 nest-asyncio==1.6.0
 nh3==0.2.21
 nltk==3.9.1
-numpy==2.1.3
+numpy==2.4.0
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==24.2
-pandas==2.2.3
+pandas==2.3.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
@@ -71,7 +72,7 @@ pytz==2025.2
 pyzmq==26.4.0
 readme_renderer==44.0
 regex==2024.11.6
-requests==2.32.3
+requests==2.32.5
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==14.0.0
